Trying to fix for mobile portrait. There's an annoying horizontal scroll that I'm having difficulty debugging. Also integrating media breaks or whatever they are. And more responsive font sizing.

--- a/src/styles/bundle.css
+++ b/src/styles/bundle.css
@@ -19,7 +19,7 @@
 	--color-gray-50: #C0C0C0;
 	--color-gray-90: #333;
 
-	--background-color: rgba(237, 235, 225, 0.965);
+	--background-color: #E0E2DB; 
 
 	--text-color: var(--color-gray-90);
 	--text-color-link: #d911a4;
@@ -52,10 +52,9 @@
 
 html,
 body {
-	padding-left: 30px;
-	margin: 0px auto auto 10px;
+	padding-left: auto;
+	margin: 0px auto auto 0.8rem;
 	font-family: var(--font-family);
-	font-variation-settings: 'slnt' 5;
 	color: var(--text-color);
 	background-color: var(--background-color);
 }
@@ -91,7 +90,7 @@ li {
 }
 
 li:not(:last-child) { 
-	margin-bottom: 20px;  
+	margin-bottom: 1.25rem;  
  }
 
 a[href] {
@@ -223,12 +222,12 @@ img {
 	background-color: hsl(30, 100%, 88%);
 	line-height:1.2em;
 	border-radius: 0.3rem;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top:10px;
-	padding-bottom:10px;
-	margin-top: 20px;
-	margin-bottom:20px;
+	padding-left: 0.625rem;
+	padding-right: 0.625rem;
+	padding-top: 0.625rem;
+	padding-bottom: 0.625rem;
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
 }
 
 .site-title {
@@ -240,13 +239,13 @@ img {
 
 pre {
 	/*font-family: var(--font-family-monospace);*/
-	font-size: 1m;
+	font-size: 1em;
 	/* border-bottom: 1px dashed var(--color-gray-20); */
 	background-color: #dcdcdc;
 	border-radius: 0.2rem;
-	padding-left: 10px;
-	padding-right: 10px;
-	margin-top: 20px;
+	padding-left: 0.625rem;
+	padding-right: 0.625rem;
+	margin-top: 1.25rem;
 }
 
 pre:not([class*="language-"]) {
@@ -414,9 +413,9 @@ ul {
 .metadata-title-header {
 	font-family: var(--font-family-monospace);
 	font-weight: 600;
-	font-size: 15px;
+	font-size: 0.8rem;
 	margin-bottom: 0em;
-	width: 300px;
+	width: 18rem;
 	/*padding: 0.5em;*/
 	/*display: inline-block; *//* or block, depending on your layout needs */
 	/*background-color: var(--color-gray-20);*/
@@ -424,14 +423,14 @@ ul {
 	@apply bg-stone-400;
 	@apply rounded-tl-md;
 	@apply rounded-tr-lg;
-	
+
 }
 
 /* a way to list posts, this is for the title */
 .index-post-title-header {
 	font-family: var(--font-family-monospace);
 	font-weight: 600;
-	font-size: 15px;
+	font-size: 0.8rem;
 	margin-bottom: 0em;
 	padding: 0.75em;
 	/*display: inline-block; *//* or block, depending on your layout needs */
@@ -441,7 +440,8 @@ ul {
 	@apply rounded-tl-md;
 	@apply rounded-tr-lg;
 	@apply shadow-lg;
-	@apply max-w-[500px];
+	@apply w-4/6;
+	@apply max-w-[30rem];
 	@apply min-h-[3em];
 }
 
@@ -455,7 +455,7 @@ ul {
 	/* @apply bg-cyan-200; */
 	@apply bg-stone-100;
 	@apply rounded-b-md;
-	@apply rounded-tr-[20px];
+	@apply rounded-tr-[1rem];
 }
 
 .description {
@@ -469,12 +469,22 @@ figure img {
 	@apply rounded-tr-[10px];
 	@apply mb-[12px];
 	@apply shadow-xl;
+	width: auto;      /* Default width, adjust as necessary */
+    max-width: 100%;  /* Ensure it doesn't overflow its container */
+    height: auto;
 }
+
+@media (max-width: 600px) { /* Adjust this value based on your design needs */
+    figure img {
+        width: 100%; /* Full width on mobile devices */
+    }
+}
+
 
 figure figcaption {
 	@apply mt-0;
 	@apply mb-8;
-	@apply ml-3;
+	@apply ml-0;
 	@apply text-xs;
 	@apply font-mono;
 	@apply border-b-[1px];
@@ -482,10 +492,10 @@ figure figcaption {
 }
 
 .draft-label {
-    position: absolute;
-    top: 10%;
-    left: 30%;
-    transform: rotate(-20deg);
+    position: relative;
+    top: 30%;
+    left: 10%;
+    transform: rotate(-5deg);
     font-size: 3em;
 	font-family: "FormaDJRMicro";
     font-weight: 900;
