--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,20 @@
 html {
   background-color: #f1f5f9;
   font-family: sans-serif;
+  font-size: 16px;
+}
+
+@media (max-width: 600px) { /* Adjust the value based on your breakpoint for mobile devices */
+  html {
+    font-size: calc(1vw + 1vh + 0.5em);
+  }
+
 }
 
 body {
   margin: 0 auto;
-  width: 100%;
-  max-width: 80ch;
   padding: 1rem;
-  line-height: 1.5;
+  line-height: 1.5em;
 }
 
 * {
@@ -20,13 +26,13 @@ body {
 /* nav styles */
 
 .hamburger {
-  padding-right: 20px;
+  padding-right: 1.3rem;
   cursor: pointer;
 }
 
 .hamburger .line {
   display: block;
-  width: 40px;
+  width: 2.5rem;
   height: 5px;
   margin-bottom: 10px;
   background-color: #0a0a0a;
@@ -35,7 +41,7 @@ body {
 .nav-links {
   width: 100%;
   top: 5rem;
-  left: 48px;
+  left: 3rem;
   background-color: #ff9776;
   display: none;
   margin: 0;
